fix: Registration schema
