# docs/swagger.json
@@ -114,7 +114,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.MockGetProfileResponse"
+                            "$ref": "#/definitions/auth.GetProfileResponse"
                         }
                     },
                     "401": {
@@ -161,7 +161,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.MockUser"
+                            "$ref": "#/definitions/auth.RegisterRequestDTO"
                         }
                     }
                 ],
@@ -169,7 +169,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.MockRegisterResponse"
+                            "$ref": "#/definitions/auth.RegisterResponse"
                         }
                     },
                     "401": {
@@ -201,11 +201,6 @@
         },
         "/events": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Get all events as array of events",
                 "produces": [
                     "application/json"
@@ -239,11 +234,6 @@
         },
         "/events/{eventId}": {
             "get": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Get event by id",
                 "produces": [
                     "application/json"
@@ -343,6 +333,17 @@
         }
     },
     "definitions": {
+        "auth.BillingualName": {
+            "type": "object",
+            "properties": {
+                "en": {
+                    "type": "string"
+                },
+                "th": {
+                    "type": "string"
+                }
+            }
+        },
         "auth.CallbackErrorResponse": {
             "type": "object",
             "properties": {
@@ -378,6 +379,78 @@
                 }
             }
         },
+        "auth.DesiredRound": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "round": {
+                    "type": "string",
+                    "example": "1"
+                }
+            }
+        },
+        "auth.FacultyInfo": {
+            "type": "object",
+            "properties": {
+                "department": {
+                    "type": "object",
+                    "properties": {
+                        "code": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "$ref": "#/definitions/auth.BillingualName"
+                        }
+                    }
+                },
+                "faculty": {
+                    "type": "object",
+                    "properties": {
+                        "code": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "$ref": "#/definitions/auth.BillingualName"
+                        }
+                    }
+                },
+                "section": {
+                    "type": "object",
+                    "properties": {
+                        "code": {
+                            "type": "string"
+                        },
+                        "name": {
+                            "$ref": "#/definitions/auth.BillingualName"
+                        }
+                    }
+                }
+            }
+        },
+        "auth.FacultyInfoId": {
+            "type": "object",
+            "properties": {
+                "department_code": {
+                    "type": "string",
+                    "example": "10"
+                },
+                "faculty_code": {
+                    "type": "string",
+                    "example": "21"
+                },
+                "order": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "section_code": {
+                    "type": "string",
+                    "example": "-"
+                }
+            }
+        },
         "auth.GetProfileErrorResponse": {
             "type": "object",
             "properties": {
@@ -388,6 +461,14 @@
                 "title": {
                     "type": "string",
                     "example": "internal-server-error"
+                }
+            }
+        },
+        "auth.GetProfileResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/auth.User"
                 }
             }
         },
@@ -414,117 +495,6 @@
                 "title": {
                     "type": "string",
                     "example": "user-not-found"
-                }
-            }
-        },
-        "auth.MockDesiredRound": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "example": "1"
-                },
-                "order": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
-        "auth.MockGetProfileResponse": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/auth.MockUser"
-                }
-            }
-        },
-        "auth.MockInterestedFaculty": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "string",
-                    "example": "1"
-                },
-                "order": {
-                    "type": "integer",
-                    "example": 1
-                }
-            }
-        },
-        "auth.MockRegisterResponse": {
-            "type": "object",
-            "properties": {
-                "user": {
-                    "$ref": "#/definitions/auth.MockUser"
-                }
-            }
-        },
-        "auth.MockUser": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string",
-                    "example": "Bangkok"
-                },
-                "allergy": {
-                    "type": "string",
-                    "example": "None"
-                },
-                "birth_date": {
-                    "type": "string",
-                    "example": "1990-01-01"
-                },
-                "desired_rounds": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/auth.MockDesiredRound"
-                    }
-                },
-                "first_name": {
-                    "type": "string",
-                    "example": "John"
-                },
-                "from_abroad": {
-                    "type": "string",
-                    "example": "no"
-                },
-                "gender": {
-                    "type": "string",
-                    "example": "male"
-                },
-                "grade": {
-                    "type": "string",
-                    "example": "undergraduate"
-                },
-                "interested_faculties": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/auth.MockInterestedFaculty"
-                    }
-                },
-                "join_cu_reason": {
-                    "type": "string",
-                    "example": "Interested in the programs offered"
-                },
-                "last_name": {
-                    "type": "string",
-                    "example": "Doe"
-                },
-                "medical_condition": {
-                    "type": "string",
-                    "example": "None"
-                },
-                "news_source": {
-                    "type": "string",
-                    "example": "Facebook"
-                },
-                "school": {
-                    "type": "string",
-                    "example": "CU"
-                },
-                "status": {
-                    "type": "string",
-                    "example": "student"
                 }
             }
         },
@@ -567,6 +537,83 @@
                 }
             }
         },
+        "auth.RegisterRequestDTO": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string",
+                    "example": "Bangkok"
+                },
+                "allergy": {
+                    "type": "string",
+                    "example": "None"
+                },
+                "birth_date": {
+                    "type": "string",
+                    "example": "1990-01-01"
+                },
+                "desired_rounds": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth.DesiredRound"
+                    }
+                },
+                "first_name": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "from_abroad": {
+                    "type": "string",
+                    "example": "no"
+                },
+                "gender": {
+                    "type": "string",
+                    "example": "male"
+                },
+                "grade": {
+                    "type": "string",
+                    "example": "undergraduate"
+                },
+                "interested_faculties": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth.FacultyInfoId"
+                    }
+                },
+                "join_cu_reason": {
+                    "type": "string",
+                    "example": "Interested in the programs offered"
+                },
+                "last_name": {
+                    "type": "string",
+                    "example": "Doe"
+                },
+                "medical_condition": {
+                    "type": "string",
+                    "example": "None"
+                },
+                "news_source": {
+                    "type": "string",
+                    "example": "Facebook"
+                },
+                "school": {
+                    "type": "string",
+                    "example": "CU"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "student"
+                }
+            }
+        },
+        "auth.RegisterResponse": {
+            "type": "object",
+            "properties": {
+                "user": {
+                    "$ref": "#/definitions/auth.User"
+                }
+            }
+        },
         "auth.RegisterUnauthorized": {
             "type": "object",
             "properties": {
@@ -577,6 +624,75 @@
                 "title": {
                     "type": "string",
                     "example": "unauthorized"
+                }
+            }
+        },
+        "auth.User": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string",
+                    "example": "Bangkok"
+                },
+                "allergy": {
+                    "type": "string",
+                    "example": "None"
+                },
+                "birth_date": {
+                    "type": "string",
+                    "example": "1990-01-01"
+                },
+                "desired_rounds": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth.DesiredRound"
+                    }
+                },
+                "first_name": {
+                    "type": "string",
+                    "example": "John"
+                },
+                "from_abroad": {
+                    "type": "string",
+                    "example": "no"
+                },
+                "gender": {
+                    "type": "string",
+                    "example": "male"
+                },
+                "grade": {
+                    "type": "string",
+                    "example": "undergraduate"
+                },
+                "interested_faculties": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/auth.FacultyInfo"
+                    }
+                },
+                "join_cu_reason": {
+                    "type": "string",
+                    "example": "Interested in the programs offered"
+                },
+                "last_name": {
+                    "type": "string",
+                    "example": "Doe"
+                },
+                "medical_condition": {
+                    "type": "string",
+                    "example": "None"
+                },
+                "news_source": {
+                    "type": "string",
+                    "example": "Facebook"
+                },
+                "school": {
+                    "type": "string",
+                    "example": "CU"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "student"
                 }
             }
         },
