# internal/model/desired_round.model.go
@@ -1,10 +1,9 @@
 package model
 
 type DesiredRound struct {
-	UserID    uint   `gorm:"primaryKey;index"     json:"-"`
-	Order     uint   `gorm:"primaryKey"           json:"order"`
-	Round     Round  `gorm:"foreignKey:RoundCode" json:"round"`
-	RoundCode string `gorm:"not null"             json:"-"`
+	UserID uint  `gorm:"primaryKey;index" json:"-"`
+	Order  uint  `gorm:"primaryKey"       json:"order"`
+	Round  Round `gorm:""                 json:"round"`
 }
 
 func (d DesiredRound) TableName() string {
