# internal/model/interested_faculty.model.go
@@ -1,12 +1,14 @@
 package model
 
 type InterestedFaculty struct {
-	UserID         uint       `gorm:"primaryKey;index"                      json:"-"`
-	Order          uint       `gorm:"primaryKey"                            json:"order"`
-	Faculty        Faculty    `gorm:"foreignKey:FacultyCode"                json:"faculty"`
-	FacultyCode    string     `gorm:"not null"`
-	Department     Department `gorm:"foreignKey:FacultyCode,DepartmentCode" json:"department"`
-	DepartmentCode string     `gorm:"not null"`
+	UserID         uint       `gorm:"primaryKey;index"                                  json:"-"`
+	Order          uint       `gorm:"primaryKey"                                        json:"order"`
+	Faculty        Faculty    `gorm:"foreignKey:FacultyCode"                            json:"faculty"`
+	FacultyCode    string     `gorm:"not null"                                          json:"-"`
+	Department     Department `gorm:"foreignKey:DepartmentCode,FacultyCode"             json:"department"`
+	DepartmentCode string     `gorm:"not null"                                          json:"-"`
+	Section        Section    `gorm:"foreignKey:SectionCode,DepartmentCode,FacultyCode" json:"section"`
+	SectionCode    string     `gorm:"not null"                                          json:"-"`
 }
 
 func (i InterestedFaculty) TableName() string {
